[package]
name = "todotui"
version = "0.1.0"
edition = "2021"
authors = ["todotui contributors"]
description = "A Vim-friendly terminal ToDo manager for researchers and developers"
license = "MIT"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
directories = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "todotui"
path = "src/main.rs"
